--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,22 @@ a:hover {
   color: white
 }
 
+img {
+  max-width: 100%;
+}
+
+#gallery {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+#gallery li {
+  float: left;
+  width: 45%;
+  margin: 2.5%;
+}
+
 header.main {
   text-align: center;
   background: url('images/sanfran.jpg') no-repeat top center ;
@@ -69,15 +85,23 @@ header.contact {
   overflow: hidden;
   padding-top: 60px;
 }
+header.portfolio {
+  text-align: center;
+  background: url('images/sutrobaths.jpg') no-repeat top center ;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
 header {
   line-height: 1.5;
 }
 header .profile-image {
   margin-top: 50px;
-  width: 150px;
-  height: 150px;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 50%;
   border: 3px solid white;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
   transition: all .5s;
 }
 header .profile-image:hover {
